-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b96
The support for rethrow_exception was only implemented for uncommon traps. Scopes with rethrow_exception=true can in rare cases be found at places where a safepoint can happen so non-uncommon trap deopts should also support rethrow_exception.
The current support in uncommon_trap_inner uses a pending exception. It should instead use the Unpack_exception exec mode and exception_oop which is the normal way to re-throw an exception during deopt.
The current support in uncommon_trap_inner uses a pending exception. It should instead use the Unpack_exception exec mode and exception_oop which is the normal way to re-throw an exception during deopt.
- relates to
-
JDK-8294190 Incorrect check messages in SharedRuntime::generate_uncommon_trap_blob
-
- Resolved
-
- links to