8141133: [JVMCI] crash during safepoint deopt if rethrow_exception is set

Reviewed-by: twisti